# neural-parser

./: AUTHORS  Makefile.am  README  README.md  aclocal.m4  configure  configure.ac
src/: Makefile.am
src/C/: Boolean6.c  FormatTimeSeriesData.c  FormatVectoredData.c  Levy6.c  Listen.c  Makefile.am  Merge.c  NormaliseData.c  Notify.c  ProduceClassFourScript.c  ProduceClassOneScript.c  ProduceClassThreeScript.c  ProduceClassTwoScript.c  Random6.c  RealRandom.c  WeightedInput.c
src/perl/: Makefile.am
src/perl/convert_data/: Makefile.am
src/perl/np/: Makefile.am
src/perl/svm-select-parameters/: Makefile.am
test/: README  create.np  test.np  testing.txt  train.np  training.txt
