##              ARTIFICIAL NEURAL NETWORKS SOFTWARE
##   Neural Parser (np) :
##   environment for training and testing neural networks
##
##                        by Andreas Hadjiprocopis
##                  (livantes@soi.city.ac.uk)
##              Copyright Andreas Hadjiprocopis, 1994,2007

OPTIONS_AUTOMAKE=gnu
ACLOCAL_AMFLAGS=-I m4

bin_SCRIPTS = convert_column_data_to_libsvm.pl convert_libsvm_to_column_data.pl
