##              ARTIFICIAL NEURAL NETWORKS SOFTWARE
##   Neural Parser (np) :
##   environment for training and testing neural networks
##
##                        by Andreas Hadjiprocopis
##                  (livantes@soi.city.ac.uk)
##              Copyright Andreas Hadjiprocopis, 1994,2007

OPTIONS_AUTOMAKE=gnu
ACLOCAL_AMFLAGS=-I m4

## place the perl executable in bin
bin_SCRIPTS = np
## we need to place the .pl and .ph files in lib any better ideas???
mycrapdir = $(libdir)
mycrap_SCRIPTS = Constants.ph  GeneralLib.pl  IOLib.pl  NeuralLib.pl  ReferenceGuide.ph
